concord_macros/tests/trybuild/fail/codegen/stream_endpoint_execute_multipart.stderr
error[E0277]: the trait bound `StreamResponse<concord_core::advanced::OctetStream>: concord_core::request::MultipartResponseKind` is not satisfied
  --> tests/trybuild/fail/codegen/stream_endpoint_execute_multipart.rs:16:28
   |
16 |     let _ = api.download().execute_multipart().await.unwrap();
   |                            ^^^^^^^^^^^^^^^^^ the trait `concord_core::request::MultipartResponseKind` is not implemented for `StreamResponse<concord_core::advanced::OctetStream>`
   |
help: the trait `concord_core::request::MultipartResponseKind` is implemented for `MultipartStream<T>`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   | impl<T> MultipartResponseKind for MultipartStream<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PendingRequest::<'a, Cx, E, T>::execute_multipart`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub async fn execute_multipart<R>(self) -> Result<R, ApiClientError>
   |                  ----------------- required by a bound in this associated function
...
   |         R: MultipartResponseKind + 'a,
   |            ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `PendingRequest::<'a, Cx, E, T>::execute_multipart`

error[E0277]: the trait bound `StreamResponse<concord_core::advanced::OctetStream>: concord_core::request::MultipartResponseKind` is not satisfied
  --> tests/trybuild/fail/codegen/stream_endpoint_execute_multipart.rs:16:13
   |
16 |     let _ = api.download().execute_multipart().await.unwrap();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `concord_core::request::MultipartResponseKind` is not implemented for `StreamResponse<concord_core::advanced::OctetStream>`
   |
help: the trait `concord_core::request::MultipartResponseKind` is implemented for `MultipartStream<T>`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   | impl<T> MultipartResponseKind for MultipartStream<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PendingRequest::<'a, Cx, E, T>::execute_multipart`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub async fn execute_multipart<R>(self) -> Result<R, ApiClientError>
   |                  ----------------- required by a bound in this associated function
...
   |         R: MultipartResponseKind + 'a,
   |            ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `PendingRequest::<'a, Cx, E, T>::execute_multipart`

error[E0277]: the trait bound `StreamResponse<concord_core::advanced::OctetStream>: concord_core::request::MultipartResponseKind` is not satisfied
  --> tests/trybuild/fail/codegen/stream_endpoint_execute_multipart.rs:16:48
   |
16 |     let _ = api.download().execute_multipart().await.unwrap();
   |                                                ^^^^^ the trait `concord_core::request::MultipartResponseKind` is not implemented for `StreamResponse<concord_core::advanced::OctetStream>`
   |
help: the trait `concord_core::request::MultipartResponseKind` is implemented for `MultipartStream<T>`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   | impl<T> MultipartResponseKind for MultipartStream<T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PendingRequest::<'a, Cx, E, T>::execute_multipart`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub async fn execute_multipart<R>(self) -> Result<R, ApiClientError>
   |                  ----------------- required by a bound in this associated function
...
   |         R: MultipartResponseKind + 'a,
   |            ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `PendingRequest::<'a, Cx, E, T>::execute_multipart`
